# my-http-server

./: .dockerignore  .env.ex  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  architecture.md  build.rs  bump.nu  cliff.toml  cofg.yaml  config-templating-map.md  developer-guide.md  dist-workspace.toml  docker-compose.yml  justfile  key-functions.md  lcov.info  performance-cache.md  renovate.json  request-flow.md  test_api_doc.rs
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: Build&release.yml  Generate-changelog.yml  Security-audit.yml  auto-merge-pr.yml  cargo-push.yml  cli.yml  docker-publish.yml  docker-test.yml  release-tag-and-backmerge.yml  release.yml  test.yml
.serena/: project.yml
docker/: cofg.docker.yaml
docker/meta/: 404.html  html-t.templating
docs/: CI.md  README.md  config-templating-map.md  developer-guide.md  ip-filter-implementation-summary.md  ip-filter.md  key-functions.md  performance-cache.md  request-flow.md  xdg-config-example.md
meta/: 404.html  html-t.hbs  html-t.templating
public/dir/: test.md
src/: api.rs  cofg.rs  cofg.yaml  error.rs  http_ext.rs  main.rs  request.rs  swagger-ui.html
src/api/: mod.rs  swagger-ui.html
src/cofg/: cli.rs  cofg.rs  cofg.yaml  config.rs  mod.rs
src/parser/: markdown.rs  mod.rs  templating.rs
src/test/: api.rs  cli.rs  cofg.rs  common.rs  config.rs  error.rs  http_ext.rs  integration.rs  main.rs  mod.rs  parser.rs  request.rs  security.rs  templating.rs  tls.rs
src/test/snapshots/: my_http_server__test__parser__md2html_basic.snap  my_http_server__test__parser__md2html_empty_template_data.snap  my_http_server__test__parser__md2html_with_context.snap
src/test/support/: mod.rs
test/: dir.html  index.html  test.http
test/dir/: test.md.html  test.txt.html
wix/: main.wxs
