[package]
    name    = "my-http-server"
    version = "3.2.0"
    edition = "2024"

[dependencies]
    actix-files = "0.6.8"
    actix-web = { version = "4.11.0", features = [
        "rustls-0_23",
    ] }
    config = "0.15.18"
    env_logger = "0.11.8"
    log = "0.4.28"
    markdown-ppp = { version = "2.7.1", features = [
        "ast-serde",
    ] }
    nest_struct = "0.5.5"
    nom = "8.0.0"
    percent-encoding = "2.3.2"
    serde = "1.0.228"
    wax = { version = "0.6.0", features = [
        "miette",
        "walk",
    ] }
    once_cell = "1.21.3"
    thiserror = "2.0.17"
    clap = { version = "4.5.48", features = [
        "derive",
    ] }
    handlebars = "6.3.2"
    serde_json = "1.0.145"
    # https://github.com/Paul-16098/my-http-server/pull/21#issuecomment-3388671499
    rustls = { version = "0.23", default-features = false, features = [
        "ring",
        "logging",
        "std",
        "tls12",
    ] }
    actix-web-httpauth = "0.8.2"
    rustls-pki-types = "1.12.0"
    actix-ip-filter = "0.3.2"
    actix-governor = { version = "0.10.0", features = [
        "log",
    ] }

[[bin]]
    name = "my-http-server"
    path = "src/main.rs"
