[package]
    name = "my-http-server"
    version = "4.1.0"
    edition = "2024"
    license-file = "./LICENSE.txt"
    readme = "./README.md"
    repository = "https://github.com/Paul-16098/my-http-server/"
    authors = [
        "Paul-16098",
    ]

[dependencies]
    actix-files = "0.6.8"
    actix-web = { version = "4.11.0", features = [
        "rustls-0_23",
    ] }
    config = "0.15.18"
    env_logger = "0.11.8"
    log = "0.4.28"
    markdown-ppp = { version = "2.7.1", features = [
        "ast-serde",
        "ast-transform",
    ] }
    nest_struct = "0.5.5"
    nom = "8.0.0"
    percent-encoding = "2.3.2"
    serde = "1.0.228"
    wax = { version = "0.6.0", features = [
        "miette",
        "walk",
    ] }
    thiserror = "2.0.17"
    clap = { version = "4.5.49", features = [
        "derive",
        "string",
    ] }
    handlebars = "6.3.2"
    serde_json = "1.0.145"
    # https://github.com/Paul-16098/my-http-server/pull/21#issuecomment-3388671499
    rustls = { version = "0.23", default-features = false, features = [
        "ring",
        "logging",
        "std",
        "tls12",
    ] }
    actix-web-httpauth = "0.8.2"
    rustls-pki-types = "1.12.0"
    actix-ip-filter = "0.3.2"
    actix-governor = { version = "0.10.0", features = [
        "log",
    ] }
    utoipa = { version = "5.4.0", features = [
        "actix_extras",
    ], optional = true }
    ureq = { version = "3.1.4", features = [
        "json",
    ], optional = true }

[[bin]]
    name = "my-http-server"
    path = "src/main.rs"

[features]
    default = [
        "github_emojis",
        "api",
    ]
    github_emojis = [
        "dep:ureq",
    ]
    api = [
        "dep:utoipa",
    ]

[dev-dependencies]
    tempfile = "3.23.0"
