[[bin]]
    name = "my-http-server"
    path = "src/main.rs"

[package]
    name = "my-http-server"
    version = "4.1.4"
    edition = "2024"
    license-file = "./LICENSE.txt"
    readme = "./README.md"
    repository = "https://github.com/Paul-16098/my-http-server/"
    description = "a server using actix-web, markdown-ppp, and handlebars"
    authors = [
        "Paul-16098",
    ]

    [package.metadata.wix]
        upgrade-guid = "5BFF95FD-A231-42D2-A585-62F661AB3D80"
        path-guid    = "F403F12C-1127-43F7-B427-DA73B1322FF8"
        license      = true
        eula         = false

[dependencies]
    actix-files        = "0.6.8"
    config             = "0.15.18"
    env_logger         = "0.11.8"
    log                = "0.4.28"
    nest_struct        = "0.5.5"
    nom                = "8.0.0"
    percent-encoding   = "2.3.2"
    serde              = "1.0.228"
    thiserror          = "2.0.17"
    handlebars         = "6.3.2"
    serde_json         = "1.0.145"
    actix-web-httpauth = "0.8.2"
    rustls-pki-types   = "1.12.0"
    actix-ip-filter    = "0.3.2"
    directories        = "6.0.0"

    [dependencies.actix-web]
        version = "4.11.0"
        features = [
            "rustls-0_23",
        ]

    [dependencies.markdown-ppp]
        version = "2.7.1"
        features = [
            "ast-serde",
            "ast-transform",
        ]

    [dependencies.wax]
        version = "0.6.0"
        features = [
            "miette",
            "walk",
        ]

    [dependencies.clap]
        version = "4.5.49"
        features = [
            "derive",
            "string",
        ]

    [dependencies.rustls]
        version = "0.23"
        default-features = false
        features = [
            "ring",
            "logging",
            "std",
            "tls12",
        ]

    [dependencies.actix-governor]
        version = "0.10.0"
        features = [
            "log",
        ]

    [dependencies.utoipa]
        version = "5.4.0"
        features = [
            "actix_extras",
        ]
        optional = true

    [dependencies.ureq]
        version = "3.1.4"
        features = [
            "json",
        ]
        optional = true

[features]
    default = [
        "github_emojis",
        "api",
    ]
    github_emojis = [
        "dep:ureq",
    ]
    api = [
        "dep:utoipa",
    ]

[dev-dependencies]
    tempfile         = "3.23.0"
    simple_test_case = "1.3.0"

[lints.clippy]
    unwrap_used = "warn"
    expect_used = "warn"

[profile.dist]
    inherits = "release"
    lto      = "thin"
